Stopping newly rendered panes from flickering.

--- a/app/ui/controller.css
+++ b/app/ui/controller.css
@@ -14,6 +14,9 @@ div.controller {
 
 	box-shadow: 0px 5px 5px rgba(0,0,0,0.75);
 	border-radius: 5px;
+
+	font-family: monospace;
+	font-size: 16px;
 }
 
 div.controller div.joystick {
